--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  flutter_localizations:
+    sdk: flutter
   uuid: ^2.2.0
   provider: ^4.3.1
   intl: ^0.16.1
@@ -31,6 +34,7 @@ dependencies:
   image_picker: ^0.6.0
   firebase_analytics: ^5.0.16
   firebase_storage: ^3.1.6
+  url_launcher: ^5.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
